--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "babel-node index.js",
-    "start:watch": "nodemon -e node-babel index.js"
+    "start": "node index.js",
+    "start:watch": "nodemon index.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
