--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "irc-framework": "^4.5.2",
-    "is-http-url": "^2.0.0"
+    "is-http-url": "^2.0.0",
+    "parse5": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
